Add register form

--- a/assets/pages/form-register.html
+++ b/assets/pages/form-register.html
@@ -1,28 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/form-register.css">
-</head>
-<body>
-  <article>
-    <h1>Register</h1>
-    <p>Create your account. It's free and only takes a minute.</p>
-    <form class="form">
-      <input placeholder="First Name" name="First-Name" type="text" pattern="[A-Z][a-z]{0,32}" required>
-      <input placeholder="Last Name" name="Last-Name" type="text" pattern="[A-Z][a-z]{0,32}" required>
-      <input placeholder="Email" name="Email" type="email" pattern="[^@ \t\r\n]+@[^@ \t\r\n]+\.[^@ \t\r\n]+" required>
-      <input placeholder="Password" name="Password" type="password" pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$" required>
-      <input placeholder="Confirm Password" name="Confirm-Password" type="password" pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$" required>
-      <label>
-        I accept the <a href="#">Terms of Use</a> & <a href="#">Privacy Policy.</a>
-        <input type="checkbox" required name="Is-Accept">
-      </label>
-      <button type="submit">Register Now</button>
-    </form>
-  </article>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/form-register.css" />
+  </head>
+  <body>
+    <article class="article">
+      <h1 class="title">Register</h1>
+      <p class="header-text">
+        Create your account. It's free and only takes a minute.
+      </p>
+      <form class="form">
+        <div>
+          <input
+            class="input first-last-name"
+            placeholder="First Name"
+            name="First-Name"
+            type="text"
+            pattern="[A-Z][a-z]{0,32}"
+            required
+          />
+          <input
+            class="input first-last-name"
+            placeholder="Last Name"
+            name="Last-Name"
+            type="text"
+            pattern="[A-Z][a-z]{0,32}"
+            required
+          />
+        </div>
+        <input
+          class="input"
+          placeholder="Email"
+          name="Email"
+          type="email"
+          pattern="[^@ \t\r\n]+@[^@ \t\r\n]+\.[^@ \t\r\n]+"
+          required
+        />
+        <input
+          class="input"
+          placeholder="Password"
+          name="Password"
+          type="password"
+          pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$"
+          required
+        />
+        <input
+          class="input"
+          placeholder="Confirm Password"
+          name="Confirm-Password"
+          type="password"
+          pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$"
+          required
+        />
+        <label class="label">
+          <input class="input checkbox" type="checkbox" required name="Is-Accept" />
+          I accept the <a href="#" class="href-color">Terms of Use</a> &
+          <a href="#" class="href-color">Privacy Policy.</a>
+        </label>
+        <button class="input button" type="submit">Register Now</button>
+      </form>
+    </article>
+  </body>
 </html>
