Fix cards css html

--- a/assets/pages/cards.html
+++ b/assets/pages/cards.html
@@ -8,41 +8,35 @@
     <link rel="stylesheet" href="../css/cards.css" />
   </head>
   <body class="body">
-    <div class="card sales relative">
-      <header>
-        <h1 class="title relative">Weekly Sales</h1>
-      </header>
-      <main>
-        <p class="sum relative">$ 15,0000</p>
-        <p class="incr-dicr relative">Increased by 60%</p>
-      </main>
-      <aside>
-        <img class="img relative" src="../icons/chart-line.svg" alt="chart-line icon" />
-      </aside>
-    </div>
-    <div class="card orders">
-      <header>
-        <h1 class="title relative">Weekly Orders</h1>
-      </header>
-      <main>
-        <p class="sum relative">$ 45,6334</p>
-        <p class="incr-dicr relative">Decreased by 10%</p>
-      </main>
-      <aside>
-        <img class="img relative"src="../icons/bookmark-outline.svg" alt="bookmark-outline icon" />
-      </aside>
-    </div>
-    <div class="card online">
-      <header>
-        <h1 class="title relative">Visitors Online</h1>
-      </header>
-      <main>
-        <p class="sum relative">$ 95,5741</p>
-        <p class="incr-dicr relative">Increased by 5%</p>
-      </main>
-      <aside>
-        <img class="img relative" src="../icons/diamond.svg" alt="diamond icon" />
-      </aside>
-    </div>
+    <article class="card sales relative">
+      <h2 class="title">Weekly Sales</h2>
+        <p class="sum sum$">$ 15,0000</p>
+        <p class="incr-dicr">Increased by 60%</p>
+        <img
+          class="img"
+          src="../icons/chart-line.svg"
+          alt="chart-line icon"
+        />
+    </article>
+    <article class="card relative">
+      <h2 class="title">Weekly Orders</h2>
+        <p class="sum">45,6334</p>
+        <p class="incr-dicr">Decreased by 10%</p>
+        <img
+          class="img"
+          src="../icons/bookmark-outline.svg"
+          alt="bookmark-outline icon"
+        />
+    </article>
+    <article class="card relative">
+      <h2 class="title">Visitors Online</h2>
+        <p class="sum">95,5741</p>
+        <p class="incr-dicr">Increased by 5%</p>
+        <img
+          class="img"
+          src="../icons/diamond.svg"
+          alt="diamond icon"
+        />
+    </article>
   </body>
 </html>
