--- a/assets/pages/form-register.html
+++ b/assets/pages/form-register.html
@@ -14,7 +14,7 @@
         Create your account. It's free and only takes a minute.
       </p>
       <form class="form">
-        <div>
+        <div class="one-line">
           <input
             class="input first-last-name"
             placeholder="First Name"
@@ -58,8 +58,8 @@
         />
         <label class="label">
           <input class="input checkbox" type="checkbox" required name="Is-Accept" />
-          I accept the <a href="#" class="href-color">Terms of Use</a> &
-          <a href="#" class="href-color">Privacy Policy.</a>
+          I accept the <a href="#" class="accept-color">Terms of Use</a> &
+          <a href="#" class="accept-color">Privacy Policy.</a>
         </label>
         <button class="input button" type="submit">Register Now</button>
       </form>
