Add form header.css

--- a/assets/pages/form-register.html
+++ b/assets/pages/form-register.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/form-register.css" />
+    <link rel="stylesheet" href="../css/Form-Register/form-register.css" />
+    <link rel="stylesheet" href="../css/Form-Register/header.css">
   </head>
   <body>
     <article class="article">
-      <h1 class="title"><span>Register</span></h1>
-      <p class="header-text">
-        Create your account. It's free and only takes a minute.
-      </p>
+      <header>
+        <h1 class="title"><span>Register</span></h1>
+        <p class="header-text">
+          Create your account. It's free and only takes a minute.
+        </p>
+      </header>
       <form class="form">
         <div class="one-line">
           <input
@@ -58,10 +61,10 @@
         />
         <label class="label">
           <input class="input" type="checkbox" required name="Is-Accept" />
-            <span>
-              I accept the <a href="#" class="accept">Terms of Use</a> &
-              <a href="#" class="accept">Privacy Policy.</a>
-            </span> 
+          <span>
+            I accept the <a href="#" class="accept">Terms of Use</a> &
+            <a href="#" class="accept">Privacy Policy.</a>
+          </span>
         </label>
         <button class="button" type="submit">Register Now</button>
       </form>
