Add fix one line

--- a/assets/pages/form-register.html
+++ b/assets/pages/form-register.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <article class="article">
-      <header>
+      <header class="header">
         <h1 class="title"><span>Register</span></h1>
         <p class="header-text">
           Create your account. It's free and only takes a minute.
